/* Description of message types for search response */
syntax = "proto3";

import "commons.proto";
import "datetime.proto";
import "google/type/latlng.proto";

option java_multiple_files = true;
option java_package = "org.apache.platypus.server.grpc";
option java_outer_classname = "SearchResponseProto";
option objc_class_prefix = "HLW";

package luceneserver;

message SearchResponse {
    message Diagnostics {
        string parsedQuery = 1;
        string rewrittenQuery = 2;
        string drillDownQuery = 3;
        double firstPassSearchTimeMs = 4;
        double highlightTimeMs = 5;
        double getFieldsTimeMs = 6;
        double newSnapshotSearcherOpenMs = 7;
        double nrtWaitTimeMs = 8;
    }

    message Hit {
        message FieldValue {
            oneof FieldValues {
                string textValue = 1; // Value for ATOM and TEXT FieldType
                bool booleanValue = 2; // Value for BOOLEAN FieldType
                int32 intValue = 3; // Value for INT FieldType
                int64 longValue = 4; // Value for LONG FieldType
                float floatValue = 5; // Value for FLOAT FieldType
                double doubleValue = 6; // Value for DOUBLE FieldType
                google.type.LatLng latLngValue = 7; // Value for LAT_LON FieldType
                google.type.DateTime dateTime = 8; // Value for DATE_TIME FieldType
            }
        }

        enum FieldValueCountType {
            NONE = 0;
            SINGLE_VALUED = 1;
            MULTI_VALUED = 2;
        }

        message CompositeFieldValue {
            FieldValueCountType fieldValueCountType = 1;
            FieldType fieldType = 2;
            repeated FieldValue fieldValue = 3;
        }

        int32 luceneDocId = 1;
        double score = 2;
        map<string, CompositeFieldValue> fields = 3;
    }

    message SearchState {
        int64 timestamp = 1;
        int64 searcherVersion = 2;
        int32 lastDocId = 3;
        repeated string lastFieldValues = 4;
        float lastScore = 5;
    }

    Diagnostics diagnostics = 1;
    bool hitTimeout = 2;
    int64 totalHits = 3;
    repeated Hit hits = 4;
    SearchState searchState = 5;
    string response = 10; //search response; TODO: dont be lazy, return a structured format not a jsonString
}